# cf-colo-hint

./: Cargo.toml  README.md  codegen.py  components.json  refresh.sh  where.durableobjects.live.json
.github/workflows/: refresh.yml
src/: generated.rs  lib.rs
