[package]
name = "cf-colo-hint"
version = "0.1.133"
edition = "2021"
description = "Cloudflare colo to Durable Objects location hint mapping"
license = "MIT"
repository = "https://github.com/connyay/cf-colo-hint"
keywords = ["cloudflare", "durable-objects", "colo", "location"]
categories = ["data-structures", "no-std"]

[dependencies]
